# nextcloud-todos

./: .gitignore  .woodpecker.yml  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml
.woodpecker/: deploy.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
nextcloud_todos/: __main__.py  app.py  caldav_client.py  calendars.py  claude_agent.py  config.py  db.py  hmac_links.py  models.py  orchestrator.py  parsing.py  runner.py  triage.py
nextcloud_todos/api/: callbacks.py  events.py  webhook.py
openclaw-plugin/: card.mjs  card.test.mjs  index.mjs  ntClient.mjs  openclaw.plugin.json  package.json
tests/: conftest.py  test_app_health.py  test_caldav_notes.py  test_calendars.py  test_callbacks_hmac.py  test_card_payload.py  test_claude_agent.py  test_config.py  test_events_api.py  test_models.py  test_on_approved.py  test_orchestrator.py  test_parsing.py  test_runner.py  test_smoke.py  test_sweep.py  test_triage.py  test_webhook_ingress.py
tests/fixtures/: vevent_not_todo.ics  vtodo_simple.ics  vtodo_with_due.ics  webhook_created.json
